# flask-wishlist-site

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  Aptfile  Blueprint Refactoring Plan.md  CLAUDE.md  DESIGN_UPDATES.md  Dockerfile  GEMINI.md  IMPROVEMENTS.md  Makefile  Procfile  README.md  app.py  celery_app.py  config.py  docker-compose.yml  extensions.py  logging_config.py  models.py  package-lock.json  price_service.py  pyproject.toml  pytest.ini  requirements.txt  requirements_new.txt  seed_dev_data.py  tasks.py  verify_smart_add.py
.claude/: settings.local.json
.github/: dependabot.yml
blueprints/: __init__.py  api.py  api_v1.py  auth.py  dashboard.py  events.py  items.py  social.py
docs/: API_V1.md  IMPLEMENTATION_PLAN_PRICE_CRAWLER.md  IMPROVEMENTS.md  LESSONS_LEARNED.md  PRD_ITEM_VARIANTS.md  PRD_PRICE_CRAWLER.md  PRD_SECRET_SANTA.md  PRD_SPLIT_GIFTS.md  PRD_WISHLIST_SHARING.md  WISHLIST_MANAGEMENT_LIFECYCLE.md
instance/: wishlist.db
scripts/: take_screenshots.py  verify_smart_add.py
services/: api_auth.py  api_serializers.py  celery_tasks.py  email_service.py  form_validators.py  item_service.py  logging_config.py  notification_service.py  price_async.py  price_cache.py  price_history.py  price_metrics.py  price_service.py  push_service.py  session_filter_manager.py  tasks.py  utils.py  view_helpers.py
static/: manifest.json  offline.html  robots.txt  sw.js
templates/: base.html  edit_item.html  event_form.html  events.html  forgot_email.html  index.html  items_list.html  login.html  my_claims.html  notifications.html  (+2 more)
(+145 files in other folders)
