[project]
name = "wishlist"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "beautifulsoup4==4.12.3",
    "blinker==1.7.0",
    "click==8.1.7",
    "docutils==0.20.1",
    "et-xmlfile==1.1.0",
    "flask==3.0.0",
    "flask-compress>=1.23",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-migrate==4.0.5",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "greenlet==3.0.1",
    "gunicorn==21.2.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "mako==1.3.0",
    "markupsafe==2.1.3",
    "numpy==2.4.0",
    "openpyxl==3.1.2",
    "packaging==23.2",
    "pandas==2.1.3",
    "playwright==1.40.0",
    "psycopg2-binary>=2.9.11",
    "pygments==2.17.2",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-playwright==0.4.4",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.1",
    "python-json-logger==4.0.0",
    "pytz==2023.3.post1",
    "requests==2.32.3",
    "six==1.16.0",
    "sqlalchemy==2.0.23",
    "typing-extensions==4.8.0",
    "tzdata==2023.3",
    "werkzeug==3.0.1",
    "whitenoise>=6.11.0",
    "sentry-sdk[flask]==1.39.1",
    "Flask-Limiter==3.5.0",
    "redis>=3.0",
]
